--- a/running/index.html
+++ b/running/index.html
@@ -34,7 +34,7 @@
             <h1 class="text-3xl md:text-5xl font-bold tracking-tight text-slate-900">
                 Avery's 2026 NYC Half Plan
             </h1>
-            <p class="text-slate-500 font-medium">Pfitz 12/47 plan for 1:30 Half Marathon</p>
+            <p class="text-slate-500 font-medium">Pfitz 12/47 plan</p>
         </header>
 
         <!-- Dashboard Grid -->
