--- a/running/index.html
+++ b/running/index.html
@@ -223,7 +223,7 @@
             "2026-01-22": { type: "Long", details: "10 mi" },
             "2026-01-23": { type: "Rest", details: "" },
             "2026-01-24": { type: "Aerobic", details: "7 mi\n2x6x100" },
-            "2026-01-25": { type: "Progression", details: "Fred Lebow HM\n15 mi total\nlast 3 @ LT" },
+            "2026-01-25": { type: "Progression", details: "Fred Lebow HM\n15 mi total, last 3 @ LT" },
 
             // Week 7 (41 mi)
             "2026-01-26": { type: "Rest", details: "", mileage: "41 mi" },
@@ -232,7 +232,7 @@
             "2026-01-29": { type: "Long", details: "11 mi" },
             "2026-01-30": { type: "Rest", details: "" },
             "2026-01-31": { type: "Recovery", details: "4 mi\n4x100" },
-            "2026-02-01": { type: "B Race", details: "Manhattan 10k" },
+            "2026-02-01": { type: "B Race", details: "Manhattan 10k\n10 mi total" },
 
             // Week 8 (50 mi)
             "2026-02-02": { type: "Rest", details: "", mileage: "50 mi" },
@@ -246,7 +246,7 @@
             // Week 9 (53 mi)
             "2026-02-09": { type: "Rest", details: "", mileage: "53 mi" },
             "2026-02-10": { type: "Aerobic", details: "7 mi" },
-            "2026-02-11": { type: "Threshold", details: "10 mi\n38' total\n(4'/4' + 5x2'/4')" },
+            "2026-02-11": { type: "Threshold", details: "10 mi, 38' total\n4'/4' + 5x2'/4' on/off" },
             "2026-02-12": { type: "Long", details: "12 mi" },
             "2026-02-13": { type: "Rest", details: "" },
             "2026-02-14": { type: "Aerobic", details: "8 mi\n10x100" },
@@ -268,7 +268,7 @@
             "2026-02-26": { type: "Long", details: "11 mi" },
             "2026-02-27": { type: "Rest", details: "" },
             "2026-02-28": { type: "Recovery", details: "4 mi\n4x100" },
-            "2026-03-01": { type: "Progression", details: "Napa Valley HM\n16 mi total\nlast 10k @ HMP" },
+            "2026-03-01": { type: "Progression", details: "Napa Valley HM\n16 mi total, last 10k @ HMP" },
 
             // Week 12 (35 mi)
             "2026-03-02": { type: "Rest", details: "", mileage: "35 mi" },
